--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-position: center center;
     margin: 0;
     font-family: 'Playfair Display', serif;
 }
