--- a/style.css
+++ b/style.css
@@ -144,10 +144,6 @@ section {
         height: 200px;
     }
 
-    .foto:hover img {
-        transform: scale(1.15);
-    }
-
     .foto .popisek {
         position: absolute;
         width: 100%;
@@ -158,7 +154,11 @@ section {
         color: white;
         font-size: 13px;
         transform: translateY(100%);
-        transition: transform 0.3s ease-in-out;
+        transition: 0.3s ease-in-out;
+    }
+
+    .foto:hover img {
+        transform: scale(1.15);
     }
 
     .foto:hover .popisek {
