--- a/style.css
+++ b/style.css
@@ -117,21 +117,16 @@ section {
         padding-bottom: 0;
     }
 
-    .pristi-rok-text-nadpis {
-        padding: 5% 0;
-    }
-
     .pristi-rok-text {
-        flex-basis: 45%;
-        margin: 0 5%;
-        padding: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        width: 50%;
+        padding: 0 5%;
     }
 
     .pristi-rok-todo {
-        flex-basis: 50%;
+        width: 50%;
         margin: 0 5%;
     }
 
@@ -153,14 +148,12 @@ section {
         margin: 0;
         padding: 10px 15px;
         background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        font-size: 13px;
         transform: translateY(100%);
-        transition: 0.3s ease-in-out;
+        transition: 0.3s;
     }
 
     .foto img {
-        transition: 0.3s ease-in-out;
+        transition: 0.3s;
     }
 
     .foto:hover img {
